--- a/build.gradle
+++ b/build.gradle
@@ -17,5 +17,6 @@ repositories {
 }
 
 dependencies {
+    compile group: 'com.google.guava', name: 'guava', version: '27.0-jre'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
