--- a/build.gradle
+++ b/build.gradle
@@ -17,6 +17,6 @@ repositories {
 }
 
 dependencies {
-    compile group: 'com.google.guava', name: 'guava', version: '27.0-jre'
+    compile group: 'io.vavr', name: 'vavr', version: '0.9.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
