--- a/build.gradle
+++ b/build.gradle
@@ -18,5 +18,7 @@ repositories {
 
 dependencies {
     compile group: 'io.vavr', name: 'vavr', version: '0.9.2'
+    compile group: 'org.codehaus.groovy', name: 'groovy-all', version: '2.4.0'
+    testCompile group: 'org.spockframework', name: 'spock-core', version: '1.2-groovy-2.4'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
